# Avowal-backend2.0

./: .gitignore  beautiful-modern-liquid-flow-design-trendy-banner_1055-14291.avif  config.py  data.json  data.py  database.py  emails.json  helpers.py  main.cpp  main.py  models.py  pyproject.toml  requirements.txt  schema.py  service.py  utils.py  vercel.json
.cph/: .main.cpp_aa3b741a986ce6aaef8163b1b3d8ada1.prob
releasenotes/: README.md
